Fixed #3412: html is broken in related items when an item is out of stock

--- a/skin/frontend/default/default/css/boxes.css
+++ b/skin/frontend/default/default/css/boxes.css
@@ -982,8 +982,9 @@ table.recently-list td {width:20%;}
 .mini-related-items .product-images input { float:left; margin-right:4px;  }
 .mini-related-items .product-details { margin-left:78px; }
 .mini-related-items ol li { padding-left:0 ; padding-right:0; }
+.mini-related-items .super-products { padding-left:17px; }
 .mini-related-items .super-products .product-images { width:52px;}
-.mini-related-items .super-products .product-details { width:70px;}
+.mini-related-items .super-products .product-details { width:70px; margin-left:61px; }
 
 /********************** Checkout */
 
